--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
+    "geist": "^1.5.1",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.556.0",
     "mysql2": "^3.15.3",
-    "next": "16.0.7",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
