--- a/package.json
+++ b/package.json
@@ -2,33 +2,48 @@
   "name": "retail-ai-analyst",
   "version": "0.1.0",
   "private": true,
+
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "index": "node scripts/index-knowledge.mjs"
   },
+
   "dependencies": {
     "@langchain/classic": "^1.0.5",
+    "@langchain/community": "^1.0.7",
     "@langchain/core": "^1.1.4",
     "@langchain/openai": "^1.1.3",
+    "@qdrant/js-client-rest": "^1.13.0",
+
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
+
+    "dotenv": "^17.2.3",
     "geist": "^1.5.1",
     "jsonwebtoken": "^9.0.3",
-    "lucide-react": "^0.556.0",
+
+    "langchain": "^1.1.5",
     "mysql2": "^3.15.3",
     "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+
+    "lucide-react": "^0.556.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+
     "typeorm": "^0.3.28"
   },
+
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "autoprefixer": "^10.4.22",
