--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
 
+    "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.12",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
+    "file-saver": "^2.0.5",
+    "papaparse": "^5.4.1",
+    "recharts": "^2.15.1",
+    "zod": "^3.25.76",
 
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.4.5",
     "geist": "^1.5.1",
     "jsonwebtoken": "^9.0.3",
 
